--- a/index.html
+++ b/index.html
@@ -227,6 +227,7 @@
                         <li><a href="link/othersucculentsindex.html#rufescensvariegata">Anacampseros rufescens variegata</a></li>
                         <li><a href="link/othersucculentsindex.html#echinatum">Delosperma echinatum</a></li>
                         <li><a href="link/othersucculentsindex.html#pulchra">Frithia pulchra</a></li>
+                        <li><a href="link/othersucculentsindex.html#lithops">Lithops</a></li>
                         <li><a href="link/othersucculentsindex.html#titanopsis">Titanopsis</a></li>
                     </ul>
                 </li>
