--- a/link/othercactusindex.html
+++ b/link/othercactusindex.html
@@ -245,6 +245,7 @@
             </div>
             <div class="index-category-tab-content" id="celsianus6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br/>Je garnis le haut d'Akadama surtout car j'aime bien le rendu qui fait un peu désertique. <br/>Je le garde dans un pot en terre-cuite de bonne taille. <br>
                 <a class="species-repotting-info" href="repottingoreocereuscelsianus.html" alt="Rempotage Oreocereus celsianus" title="Rempotage Oreocereus celsianus">Voir comment je rempote mon Oreocereus celsianus</a>
+                </div>
         </section>
         <hr>
         <section class="index-category-system-tabs">                            <!-- STETSONIA CORYNE -->
