--- a/link/othersucculentsgallery.html
+++ b/link/othersucculentsgallery.html
@@ -23,6 +23,7 @@
                 <a href="#rufescensvariegata">Anacampseros rufescens variegata,</a>
                 <a href="#echinatum">Delosperma echinatum,</a>
                 <a href="#pulchra">Frithia pulchra,</a>
+                <a href="#lithops">Lithops,</a>
                 <a href="#titanopsis">Titanopsis.</a>
             </h2>        
         </header>        
@@ -73,6 +74,17 @@
             <img class="flex" src="../assets/img/othersucculents/gallery/frithiapulchra(7).jpg" alt="Frithia pulchra" title="Frithia pulchra"/>
             <img class="flex" src="../assets/img/othersucculents/gallery/frithiapulchra(8).jpg" alt="Frithia pulchra" title="Frithia pulchra"/>
 	</section>
+    <hr>
+                <div class="species-title-gallery-category" id="lithops">Lithops
+                        <a href="othersucculentsindex.html#lithops">Voir la fiche info</a>
+                </div>
+                <hr>
+    <section>                                                                   <!-- LITHOPS -->
+            <img class="flex" src="../assets/img/othersucculents/gallery/lithops(1).jpg" alt="lithops" title="lithops"/>
+            <img class="flex" src="../assets/img/othersucculents/gallery/lithops(2).jpg" alt="lithops" title="lithops"/>
+            <img class="flex" src="../assets/img/othersucculents/gallery/lithops(3).jpg" alt="lithops" title="lithops"/>
+            <img class="flex" src="../assets/img/othersucculents/gallery/lithops(4).jpg" alt="lithops" title="lithops"/>
+    </section>
                 <hr>
                 <div class="species-title-gallery-category" id="titanopsis">Titanopsis
                         <a href="othersucculentsindex.html#Titanopsis">Voir la fiche info</a>
