--- a/link/repottingferocactusstainesii.html
+++ b/link/repottingferocactusstainesii.html
@@ -23,7 +23,7 @@
 <main>                                                                          <!-- TOUTES LES ÉTAPES -->
     <section class="species-repotting-step">                                    <!-- TERREAU -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/substrat/terreau.jpg" alt="Terreau universel" title="Terreau universel"/>
+            <img class="responsive-resize" src="../assets/img/repotting/substrat/terreau.jpg" alt="Terreau universel" title="Terreau universel"/>
         </div>
         <div class="species-repotting-expl">
             <p>
@@ -33,7 +33,7 @@
     </section>
     <section class="species-repotting-step">                                    <!-- GRAVILLONS QUARTZ -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/substrat/quartz.jpg" alt="gravillons de quartz" title="gravillons de quartz"/>
+            <img class="responsive-resize" src="../assets/img/repotting/substrat/quartz.jpg" alt="gravillons de quartz" title="gravillons de quartz"/>
         </div>
         <div class="species-repotting-expl">
             <p>
@@ -43,7 +43,7 @@
     </section>
     <section class="species-repotting-step">                                    <!-- SABLE RIVIÈRE -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/substrat/sand.jpg" alt="sable de rivière" title="sable de rivière"/>
+            <img class="responsive-resize" src="../assets/img/repotting/substrat/sand.jpg" alt="sable de rivière" title="sable de rivière"/>
         </div>
         <div class="species-repotting-expl">
             <p>
@@ -53,7 +53,7 @@
     </section>
     <section class="species-repotting-step">                                    <!-- MÉLANGE -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/substrat/melange.jpg" alt="mélange fait" title="mélange fait"/>
+            <img class="responsive-resize" src="../assets/img/repotting/substrat/melange.jpg" alt="mélange fait" title="mélange fait"/>
         </div>
         <div class="species-repotting-expl">
             <p>
@@ -63,7 +63,7 @@
     </section>
     <section class="species-repotting-step">                                    <!-- AKADAMA -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/substrat/akadama.jpg" alt="gravillons akadama" title="gravilons akadama"/>
+            <img class="responsive-resize" src="../assets/img/repotting/substrat/akadama.jpg" alt="gravillons akadama" title="gravilons akadama"/>
         </div>
         <div class="species-repotting-expl">
             <p>
@@ -73,7 +73,7 @@
     </section>
     <section class="species-repotting-step">                                    <!-- AVANT REMPOTTAGE -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/ferocactusstainesii(1).jpg" alt="avant rempotage" title="avant rempotage"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/ferocactusstainesii(1).jpg" alt="avant rempotage" title="avant rempotage"/>
         </div>
         <div class="species-repotting-expl">
             <p>
@@ -83,7 +83,7 @@
     </section>
     <section class="species-repotting-step">                                    <!-- SORTI DE SA MOTTE -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/ferocactusstainesii(2).jpg" alt="sorti de sa motte" title="sorti de sa motte"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/ferocactusstainesii(2).jpg" alt="sorti de sa motte" title="sorti de sa motte"/>
         </div>
         <div class="species-repotting-expl">
             <p>
@@ -93,7 +93,7 @@
     </section>
     <section class="species-repotting-step">                                    <!-- TENIR SANS SE PIQUER -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/ferocactusstainesii(3).jpg" alt="le tenir sans se piquer" title="le tenir sans se piquer"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/ferocactusstainesii(3).jpg" alt="le tenir sans se piquer" title="le tenir sans se piquer"/>
         </div>
         <div class="species-repotting-expl">
             <p>
@@ -103,7 +103,7 @@
     </section>
     <section class="species-repotting-step">                                    <!-- TENIR SANS SE PIQUER -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/ferocactusstainesii(4).jpg" alt="le tenir sans se piquer" title="le tenir sans se piquer"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/ferocactusstainesii(4).jpg" alt="le tenir sans se piquer" title="le tenir sans se piquer"/>
         </div>
         <div class="species-repotting-expl">
             <p>
@@ -113,7 +113,7 @@
     </section>
     <section class="species-repotting-step">                                    <!-- CACTUS AVEC TUTEURS -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/ferocactusstainesii(5).jpg" alt="cactus avec tuteurs" title="cactus avec tuteurs"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/ferocactusstainesii(5).jpg" alt="cactus avec tuteurs" title="cactus avec tuteurs"/>
         </div>
         <div class="species-repotting-expl">
             <p>
@@ -123,7 +123,7 @@
     </section>
     <section class="species-repotting-step">                                    <!-- PLACEMENT CACTUS -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/ferocactusstainesii(6).jpg" alt="cactus placé au milieu" title="cactus placé au milieu"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/ferocactusstainesii(6).jpg" alt="cactus placé au milieu" title="cactus placé au milieu"/>
         </div>
         <div class="species-repotting-expl">
             <p>
@@ -133,7 +133,7 @@
     </section>
     <section class="species-repotting-step">                                    <!-- PLACE POUR PASSER LES DOIGTS -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/ferocactusstainesii(7).jpg" alt="place pour les doigts autour du cactus" title="place pour les doigts autour du cactus"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/ferocactusstainesii(7).jpg" alt="place pour les doigts autour du cactus" title="place pour les doigts autour du cactus"/>
         </div>
         <div class="species-repotting-expl">
             <p>
@@ -143,7 +143,7 @@
     </section>
     <section class="species-repotting-step">                                    <!-- SURFAÇAGE AKADAMA -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/ferocactusstainesii(8).jpg" alt="surfaçage akadama" title="surfaçage akadama"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/ferocactusstainesii(8).jpg" alt="surfaçage akadama" title="surfaçage akadama"/>
         </div>
         <div class="species-repotting-expl">
             <p>
@@ -153,7 +153,7 @@
     </section>
     <section class="species-repotting-step">                                    <!-- REMPOTTAGE FINI -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/ferocactusstainesii(9).jpg" alt="rempotage fini" title="rempotage fini"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/ferocactusstainesii(9).jpg" alt="rempotage fini" title="rempotage fini"/>
         </div>
         <div class="species-repotting-expl">
             <p>
