--- a/link/repottingnotocactusmagnificus.html
+++ b/link/repottingnotocactusmagnificus.html
@@ -23,7 +23,7 @@
 <main>                                                                          <!-- TOUTES LES ÉTAPES -->
     <section class="species-repotting-step">                                    <!-- TERREAU -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/substrat/terreau.jpg" alt="Terreau universel" title="Terreau universel"/>
+            <img class="responsive-resize" src="../assets/img/repotting/substrat/terreau.jpg" alt="Terreau universel" title="Terreau universel"/>
         </div>
         <div class="species-repotting-expl">
             <p>
@@ -33,7 +33,7 @@
     </section>
     <section class="species-repotting-step">                                    <!-- GRAVILLONS QUARTZ -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/substrat/quartz.jpg" alt="gravillons de quartz" title="gravillons de quartz"/>
+            <img class="responsive-resize" src="../assets/img/repotting/substrat/quartz.jpg" alt="gravillons de quartz" title="gravillons de quartz"/>
         </div>
         <div class="species-repotting-expl">
             <p>
@@ -43,7 +43,7 @@
     </section>
     <section class="species-repotting-step">                                    <!-- SABLE RIVIÈRE -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/substrat/sand.jpg" alt="sable de rivière" title="sable de rivière"/>
+            <img class="responsive-resize" src="../assets/img/repotting/substrat/sand.jpg" alt="sable de rivière" title="sable de rivière"/>
         </div>
         <div class="species-repotting-expl">
             <p>
@@ -53,7 +53,7 @@
     </section>
     <section class="species-repotting-step">                                    <!-- MÉLANGE -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/substrat/melange.jpg" alt="mélange fait" title="mélange fait"/>
+            <img class="responsive-resize" src="../assets/img/repotting/substrat/melange.jpg" alt="mélange fait" title="mélange fait"/>
         </div>
         <div class="species-repotting-expl">
             <p>
@@ -63,17 +63,17 @@
     </section>
     <section class="species-repotting-step">                                    <!-- AKADAMA -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/substrat/akadama.jpg" alt="gravillons akadama" title="gravilons akadama"/>
+            <img class="responsive-resize" src="../assets/img/repotting/substrat/akadama.jpg" alt="gravillons akadama" title="gravilons akadama"/>
         </div>
         <div class="species-repotting-expl">
             <p>
                 Ici, des gravillons d'Akadama qui serviront en surface.
             </p>
         </div>
-    </section>                                                                  <!-- AVANT REMPOTTAGE -->
-    <section class="species-repotting-step">
+    </section>                                                                  
+    <section class="species-repotting-step">                                    <!-- AVANT REMPOTTAGE -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/notocactusmagnificus(1).jpg" alt="avant rempotage" title="avant rempotage"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/notocactusmagnificus(1).jpg" alt="avant rempotage" title="avant rempotage"/>
         </div>
         <div class="species-repotting-expl">
             <p>
@@ -83,7 +83,7 @@
     </section>
     <section class="species-repotting-step">                                    <!-- COMPARAISON POTS -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/notocactusmagnificus(2).jpg" alt="comparaison pots" title="comparaison pots"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/notocactusmagnificus(2).jpg" alt="comparaison pots" title="comparaison pots"/>
         </div>
         <div class="species-repotting-expl">
             <p>
@@ -93,7 +93,7 @@
     </section>
     <section class="species-repotting-step">                                    <!-- DÉPOTTAGE -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/notocactusmagnificus(3).jpg" alt="dépottage" title="dépottage"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/notocactusmagnificus(3).jpg" alt="dépottage" title="dépottage"/>
         </div>
         <div class="species-repotting-expl">
             <p>
@@ -103,7 +103,7 @@
     </section>
     <section class="species-repotting-step">                                    <!-- VUE RACINES -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/notocactusmagnificus(4).jpg" alt="vue des racines" title="vue des racines"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/notocactusmagnificus(4).jpg" alt="vue des racines" title="vue des racines"/>
         </div>
         <div class="species-repotting-expl">
             <p>
@@ -113,7 +113,7 @@
     </section>
     <section class="species-repotting-step">                                    <!-- POT PARTIELLEMENT REMPLI -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/notocactusmagnificus(5).jpg" alt="pot partiellement rempli" title="pot partiellement rempli"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/notocactusmagnificus(5).jpg" alt="pot partiellement rempli" title="pot partiellement rempli"/>
         </div>
         <div class="species-repotting-expl">
             <p>
@@ -123,7 +123,7 @@
     </section>
     <section class="species-repotting-step">                                    <!-- TUTEURAGE -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/notocactusmagnificus(6).jpg" alt="tuteurage" title="tuteurage"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/notocactusmagnificus(6).jpg" alt="tuteurage" title="tuteurage"/>
         </div>
         <div class="species-repotting-expl">
             <p>
@@ -133,7 +133,7 @@
     </section>
     <section class="species-repotting-step">                                    <!-- BARRES MAINTIEN -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/notocactusmagnificus(7).jpg" alt="reste les barres de maintien" title="reste les barres de maintien"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/notocactusmagnificus(7).jpg" alt="reste les barres de maintien" title="reste les barres de maintien"/>
         </div>
         <div class="species-repotting-expl">
             <p>
@@ -143,7 +143,7 @@
     </section>
     <section class="species-repotting-step">                                    <!-- REMPOTTAGE FINI -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/notocactusmagnificus(8).jpg" alt="rempotage fini" title="rempotage fini"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/notocactusmagnificus(8).jpg" alt="rempotage fini" title="rempotage fini"/>
         </div>
         <div class="species-repotting-expl">
             <p>
@@ -153,7 +153,7 @@
     </section>
     <section class="species-repotting-step">                                    <!-- VIE DEHORS -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/notocactusmagnificus(9).jpg" alt="vie dehors" title="vie dehors"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/notocactusmagnificus(9).jpg" alt="vie dehors" title="vie dehors"/>
         </div>
         <div class="species-repotting-expl">
             <p>
@@ -161,7 +161,6 @@
             </p>
         </div>
     </section>
-
 </main>
 <footer>                                                                        <!-- BOUTONS HAUT DE PAGE ET ACCUEIL -->                           
         <button class="styled-btn-top"><a href="#top">Haut de la page</a></button>
