--- a/link/repottingoreocereuscelsianus.html
+++ b/link/repottingoreocereuscelsianus.html
@@ -23,7 +23,7 @@
 <main>                                                                          <!-- TOUTES LES ÉTAPES -->
     <section class="species-repotting-step">                                    <!-- TERREAU -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/substrat/terreau.jpg" alt="Terreau universel" title="Terreau universel"/>
+            <img class="responsive-resize" src="../assets/img/repotting/substrat/terreau.jpg" alt="Terreau universel" title="Terreau universel"/>
         </div>
         <div class="species-repotting-expl">
             <p>
@@ -33,7 +33,7 @@
     </section>
     <section class="species-repotting-step">                                    <!-- GRAVILLONS QUARTZ -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/substrat/quartz.jpg" alt="gravillons de quartz" title="gravillons de quartz"/>
+            <img class="responsive-resize" src="../assets/img/repotting/substrat/quartz.jpg" alt="gravillons de quartz" title="gravillons de quartz"/>
         </div>
         <div class="species-repotting-expl">
             <p>
@@ -43,7 +43,7 @@
     </section>
     <section class="species-repotting-step">                                    <!-- SABLE RIVIÈRE -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/substrat/sand.jpg" alt="sable de rivière" title="sable de rivière"/>
+            <img class="responsive-resize" src="../assets/img/repotting/substrat/sand.jpg" alt="sable de rivière" title="sable de rivière"/>
         </div>
         <div class="species-repotting-expl">
             <p>
@@ -53,7 +53,7 @@
     </section>
     <section class="species-repotting-step">                                    <!-- MÉLANGE -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/substrat/melange.jpg" alt="mélange fait" title="mélange fait"/>
+            <img class="responsive-resize" src="../assets/img/repotting/substrat/melange.jpg" alt="mélange fait" title="mélange fait"/>
         </div>
         <div class="species-repotting-expl">
             <p>
@@ -63,7 +63,7 @@
     </section>
     <section class="species-repotting-step">                                    <!-- AKADAMA -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/substrat/akadama.jpg" alt="gravillons akadama" title="gravilons akadama"/>
+            <img class="responsive-resize" src="../assets/img/repotting/substrat/akadama.jpg" alt="gravillons akadama" title="gravilons akadama"/>
         </div>
         <div class="species-repotting-expl">
             <p>
@@ -73,7 +73,7 @@
     </section>
     <section class="species-repotting-step">                                    <!-- AVANT REMPOTTAGE -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/oreocereuscelsianus(1).jpg" alt="avant rempotage" title="avant rempotage"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/oreocereuscelsianus(1).jpg" alt="avant rempotage" title="avant rempotage"/>
         </div>
         <div class="species-repotting-expl">
             <p>
@@ -83,7 +83,7 @@
     </section>
     <section class="species-repotting-step">                                    <!-- SORTI DU POT -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/oreocereuscelsianus(2).jpg" alt="cactus sorti du pot" title="cactus sorti du pot"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/oreocereuscelsianus(2).jpg" alt="cactus sorti du pot" title="cactus sorti du pot"/>
         </div>
         <div class="species-repotting-expl">
             <p>
@@ -93,7 +93,7 @@
     </section>
     <section class="species-repotting-step">                                    <!-- DÉGAGEMENT RACINES -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/oreocereuscelsianus(3).jpg" alt="dégagement des racines" title="dégagement des racines"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/oreocereuscelsianus(3).jpg" alt="dégagement des racines" title="dégagement des racines"/>
         </div>
         <div class="species-repotting-expl">
             <p>
@@ -103,7 +103,7 @@
     </section>
     <section class="species-repotting-step">                                    <!-- PLACEMENT NOUVEAU POT -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/oreocereuscelsianus(4).jpg" alt="placement dans le nouveau pot" title="placement dans le nouveau pot"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/oreocereuscelsianus(4).jpg" alt="placement dans le nouveau pot" title="placement dans le nouveau pot"/>
         </div>
         <div class="species-repotting-expl">
             <p>
@@ -113,7 +113,7 @@
     </section>
     <section class="species-repotting-step">                                    <!-- TUTEURS MAINTIEN -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/oreocereuscelsianus(5).jpg" alt="tuteurs de maintien" title="tuteurs de maintien"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/oreocereuscelsianus(5).jpg" alt="tuteurs de maintien" title="tuteurs de maintien"/>
         </div>
         <div class="species-repotting-expl">
             <p>
@@ -123,7 +123,7 @@
     </section>
     <section class="species-repotting-step">                                    <!-- REMPOTTAGE FINI -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/oreocereuscelsianus(6).jpg" alt="rempotage fini" title="rempotage fini"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/oreocereuscelsianus(6).jpg" alt="rempotage fini" title="rempotage fini"/>
         </div>
         <div class="species-repotting-expl">
             <p>
