--- a/link/repottingstetsoniacoryne.html
+++ b/link/repottingstetsoniacoryne.html
@@ -20,10 +20,10 @@
                     <button class="styled-btn-welcome"><a href="../index.html">Retourner sur la page d'accueil</a></button>
                 </section>
     </header>
-    <main>                                                                          <!-- TOUTES LES ÉTAPES -->
-        <section class="species-repotting-step">                                    <!-- TERREAU -->
+        <main>                                                                          <!-- TOUTES LES ÉTAPES -->
+        <section class="species-repotting-step">                                        <!-- TERREAU -->
             <div class="species-repotting-img">
-                <img src="../assets/img/repotting/substrat/terreau.jpg" alt="Terreau universel" title="Terreau universel"/>
+                <img class="responsive-resize" src="../assets/img/repotting/substrat/terreau.jpg" alt="Terreau universel" title="Terreau universel"/>
             </div>
             <div class="species-repotting-expl">
                 <p>
@@ -31,9 +31,9 @@
                 </p>
             </div>
         </section>
-        <section class="species-repotting-step">                                    <!-- GRAVILLONS QUARTZ -->
+        <section class="species-repotting-step">                                        <!-- GRAVILLONS QUARTZ -->
             <div class="species-repotting-img">
-                <img src="../assets/img/repotting/substrat/quartz.jpg" alt="gravillons de quartz" title="gravillons de quartz"/>
+                <img class="responsive-resize" src="../assets/img/repotting/substrat/quartz.jpg" alt="gravillons de quartz" title="gravillons de quartz"/>
             </div>
             <div class="species-repotting-expl">
                 <p>
@@ -41,9 +41,9 @@
                 </p>
             </div>
         </section>
-        <section class="species-repotting-step">                                    <!-- SABLE RIVIÈRE -->
+        <section class="species-repotting-step">                                        <!-- SABLE RIVIÈRE -->
             <div class="species-repotting-img">
-                <img src="../assets/img/repotting/substrat/sand.jpg" alt="sable de rivière" title="sable de rivière"/>
+                <img class="responsive-resize" src="../assets/img/repotting/substrat/sand.jpg" alt="sable de rivière" title="sable de rivière"/>
             </div>
             <div class="species-repotting-expl">
                 <p>
@@ -51,9 +51,9 @@
                 </p>
             </div>
         </section>
-        <section class="species-repotting-step">                                    <!-- MÉLANGE -->
+        <section class="species-repotting-step">                                        <!-- MÉLANGE -->
             <div class="species-repotting-img">
-                <img src="../assets/img/repotting/substrat/melange.jpg" alt="mélange fait" title="mélange fait"/>
+                <img class="responsive-resize" src="../assets/img/repotting/substrat/melange.jpg" alt="mélange fait" title="mélange fait"/>
             </div>
             <div class="species-repotting-expl">
                 <p>
@@ -61,9 +61,9 @@
                 </p>
             </div>
         </section>
-        <section class="species-repotting-step">                                    <!-- AKADAMA -->
+        <section class="species-repotting-step">                                        <!-- AKADAMA -->
             <div class="species-repotting-img">
-                <img src="../assets/img/repotting/substrat/akadama.jpg" alt="gravillons akadama" title="gravilons akadama"/>
+                <img class="responsive-resize" src="../assets/img/repotting/substrat/akadama.jpg" alt="gravillons akadama" title="gravilons akadama"/>
             </div>
             <div class="species-repotting-expl">
                 <p>
@@ -71,56 +71,56 @@
                 </p>
             </div>
         </section>
-    <section class="species-repotting-step">                                        <!-- AVANT REMPOTTAGE -->
-        <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/stetsoniacoryne(1).jpg" alt="avant rempottage" title="avant rempottage"/>
-        </div>
-        <div class="species-repotting-expl">
-            <p>
-                Ici, ce sont mes Stesonia coryne après les avoir achetés, ils vont pouvoir passer au rempotage très prochainement afin d'avoir un meilleur substrat. On voit bien la longueur de leurs épines.
-            </p>
-        </div>
-    </section>
-    <section class="species-repotting-step">                                        <!-- CASSER POT -->
-        <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/stetsoniacoryne(2).jpg" alt="casser pot plastique" title="casser pot plastique"/>
-        </div>
-        <div class="species-repotting-expl">
-            <p>
-                Ici, comme on le voit, j'ai cassé le pot en plastique afin de pouvoir attraper par la motte sans toucher les épines et sans risque de me blesser.
-            </p>
-        </div>
-    </section>
-    <section class="species-repotting-step">                                        <!-- DÉMOTTAGE FAIT -->
-        <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/stetsoniacoryne(3).jpg" alt="cactus racines quasi nues" title="cactus racines quasi nues"/>
-        </div>
-        <div class="species-repotting-expl">
-            <p>
-                Ici, j'ai déjà retiré une grosse partie de l'ancien substrat et je peux tenir le cactus par le bas sans me blesser aux épines.
-            </p>
-        </div>
-    </section>
-    <section class="species-repotting-step">                                        <!-- CACTUS AVEC TUTEURS -->
-        <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/stetsoniacoryne(4).jpg" alt="cactus avec tuteurs" title="cactus avec tuteurs"/>
-        </div>
-        <div class="species-repotting-expl">
-            <p>
-                Ici, j'ai partiellement rempli le nouveau pot avec mon nouveau substrat afin de placer le cactus comme je le désire et je le fais tenir en place à l'aide de 4 tuteurs ainsi, je n'ai pas besoin de le tenir moi-même.
-            </p>
-        </div>
-    </section>
-    <section class="species-repotting-step">                                        <!-- REMPOTTAGE FINI -->
-        <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/stetsoniacoryne(5).jpg" alt="rempotage fini" title="rempotage fini"/>
-        </div>
-        <div class="species-repotting-expl">
-            <p>
-                Ici, j'ai retiré les tuteurs et rempli de nouveau substrat avec un surfaçage d'Akadama. Le cactus est rempoté sans blessures en le manipulant, que ce soit sur mes mains ou sur le cactus lui-même.
-            </p>
-        </div>
-    </section>
+        <section class="species-repotting-step">                                        <!-- AVANT REMPOTTAGE -->
+            <div class="species-repotting-img">
+                <img class="responsive-resize" src="../assets/img/repotting/species/stetsoniacoryne(1).jpg" alt="avant rempottage" title="avant rempottage"/>
+            </div>
+            <div class="species-repotting-expl">
+                <p>
+                    Ici, ce sont mes Stesonia coryne après les avoir achetés, ils vont pouvoir passer au rempotage très prochainement afin d'avoir un meilleur substrat. On voit bien la longueur de leurs épines.
+                </p>
+            </div>
+        </section>
+        <section class="species-repotting-step">                                        <!-- CASSER POT -->
+            <div class="species-repotting-img">
+                <img class="responsive-resize" src="../assets/img/repotting/species/stetsoniacoryne(2).jpg" alt="casser pot plastique" title="casser pot plastique"/>
+            </div>
+            <div class="species-repotting-expl">
+                <p>
+                    Ici, comme on le voit, j'ai cassé le pot en plastique afin de pouvoir attraper par la motte sans toucher les épines et sans risque de me blesser.
+                </p>
+            </div>
+        </section>
+        <section class="species-repotting-step">                                        <!-- DÉMOTTAGE FAIT -->
+            <div class="species-repotting-img">
+                <img class="responsive-resize" src="../assets/img/repotting/species/stetsoniacoryne(3).jpg" alt="cactus racines quasi nues" title="cactus racines quasi nues"/>
+            </div>
+            <div class="species-repotting-expl">
+                <p>
+                    Ici, j'ai déjà retiré une grosse partie de l'ancien substrat et je peux tenir le cactus par le bas sans me blesser aux épines.
+                </p>
+            </div>
+        </section>
+        <section class="species-repotting-step">                                        <!-- CACTUS AVEC TUTEURS -->
+            <div class="species-repotting-img">
+                <img class="responsive-resize" src="../assets/img/repotting/species/stetsoniacoryne(4).jpg" alt="cactus avec tuteurs" title="cactus avec tuteurs"/>
+            </div>
+            <div class="species-repotting-expl">
+                <p>
+                    Ici, j'ai partiellement rempli le nouveau pot avec mon nouveau substrat afin de placer le cactus comme je le désire et je le fais tenir en place à l'aide de 4 tuteurs ainsi, je n'ai pas besoin de le tenir moi-même.
+                </p>
+            </div>
+        </section>
+        <section class="species-repotting-step">                                        <!-- REMPOTTAGE FINI -->
+            <div class="species-repotting-img">
+                <img class="responsive-resize" src="../assets/img/repotting/species/stetsoniacoryne(5).jpg" alt="rempotage fini" title="rempotage fini"/>
+            </div>
+            <div class="species-repotting-expl">
+                <p>
+                    Ici, j'ai retiré les tuteurs et rempli de nouveau substrat avec un surfaçage d'Akadama. Le cactus est rempoté sans blessures en le manipulant, que ce soit sur mes mains ou sur le cactus lui-même.
+                </p>
+            </div>
+        </section>
 </main>
 <footer>                                                                        <!-- BOUTONS HAUT DE PAGE ET ACCUEIL -->                                 
         <button class="styled-btn-top"><a href="#top">Haut de la page</a></button>
