--- a/link/othersucculentsindex.html
+++ b/link/othersucculentsindex.html
@@ -23,6 +23,7 @@
                     <a href="#rufescensvariegata">Anacampseros rufescens variegata,</a>
                     <a href="#echinatum">Delosperma echinatum,</a>
                     <a href="#pulchra">Frithia pulchra,</a>
+                    <a href="#lithops">lithops,</a>
                     <a href="#titanopsis">Titanopsis.</a>
                 </h2>
         </header>
@@ -145,6 +146,31 @@
             <div class="index-category-tab-content" id="pulchra5" hidden="hidden">Je stoppe tous les arrosages durant plusieurs mois une fois rentré jusqu'au retour du beau temps. <br/> Je donne un peu d'eau seulement si je vois que les feuilles commence à se fripper. 
             </div>
             <div class="index-category-tab-content" id="pulchra6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br/>Je le garde dans un pot en terre-cuite de petite taille. <br/>J'ai garni le haut de gravillons de quartz car je n'avais plus que celà et le rendu clair me plaît donc je les laisse.
+            </div>
+        </section>
+        <hr>
+        <section class="index-category-system-tabs">                            <!-- LITHOPS -->
+            <nav-tabs class="index-category-nav-tabs" id="lithops">
+                <a href="#lithops1" aria-selected="true">Nom</a>
+                <a href="#lithops2">Exposition en été</a>
+                <a href="#lithops3">Exposition en hiver</a>
+                <a href="#lithops4">Arrosage en été</a>
+                <a href="#lithops5">Arrosage en hiver</a>
+                <a href="#lithops6">Rempotage</a>
+            </nav-tabs>   
+            <div class="index-category-tab-content" id="lithops1"><span class="species">Frithia pulchra<a href="othersucculentsgallery.html#lithops">Voir la galerie photo</a></span>
+                    <img src="../assets/img/othersucculents/index/lithops.jpg" alt="lithops" title="lithops"/>
+            </div>   
+            <div class="index-category-tab-content" id="lithops2" hidden="hidden">Je le mets dehors à partir de la deuxième quinzaine de Mai jusque courant Octobre dans une situation très lumineuse avec du soleil direct toute la journée. <br/>Seulement après avoir été acclimaté au soleil.
+            </div>
+            <div class="index-category-tab-content" id="lithops3" hidden="hidden">Je le place en intérieur dans une pièce non chauffée contre une fenêtre recevant du soleil. 
+            </div>
+            <div class="index-category-tab-content" id="lithops4" hidden="hidden">Je ne l'arrose que lors de longues périodes de soleil sans pluie.
+            </div>
+            <div class="index-category-tab-content" id="lithops5" hidden="hidden">Je stoppe tous les arrosages durant plusieurs mois une fois rentré jusqu'au retour du beau temps. <br/> Je donne un peu d'eau seulement si je vois que les feuilles commence à se fripper. 
+            </div>
+            <div class="index-category-tab-content" id="lithops6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br/>Je les garde dans un pot en plastiquerond qui se trouve dans un grand bac carré en terr-cuite rempli de sable afin de garder les pieds des Lithops au fraios. <br/>J'ai garni le haut de graviers de Jura car le rendu me plaît.
+                <a class="species-repotting-info" href="repottinglithops.html" alt="Rempotage lithops" title="Rempotage lithops">Voir comment je rempote mes lithops</a>
             </div>
         </section>
         <hr>
