--- a/modal.html
+++ b/modal.html
@@ -17,122 +17,133 @@
                     <hr>
                         <div class="modal-update-left">
                             <ul>
-                                <li>
+                                <li>                                            <!-- 03/05/2021 -->
                                     <div class="modal-date-flex">
                                         03/05/2021:
                                     </div>
                                         <div class="modal-desc-flex">
-                                                    _Ajout d'un menu déroulant donnant accès directement aux différentes catégories de plantes et vers les plantes choisies.<br/>
-                                                    _Création de boîtes modales affichant la liste des mises à jour et la liste des choses à venir.
+                                            &nbsp;&nbsp;_Ajout d'un menu déroulant donnant accès directement aux différentes catégories de plantes et vers les plantes choisies.<br/>
+                                            &nbsp;&nbsp;_Création de boîtes modales affichant la liste des mises à jour et la liste des choses à venir.
                                         </div>
                                 </li>
-                                <li>
+                                <li>                                            <!-- 13/05/2021 -->
                                     <div class="modal-date-flex">
                                                 13/05/2021:
                                     </div>
                                         <div class="modal-desc-flex">
-                                                    _Modification et animation des différents titres des catégories de plantes sur l'accueil du site.
+                                            &nbsp;&nbsp;_Modification et animation des différents titres des catégories de plantes sur l'accueil du site.
                                         </div>
                                 </li>
-                                <li>
+                                <li>                                            <!-- 14/05/2021 -->
                                     <div class="modal-date-flex">
                                                 14/05/2021:
                                     </div>
                                         <div class="modal-desc-flex">
-                                                    _Correction de bugs sur l'écran d'accueil.
+                                            &nbsp;&nbsp;_Correction de bugs sur l'écran d'accueil.
                                         </div>
                                 </li>
-                                <li>
+                                <li>                                            <!-- 24/05/2021 -->
                                     <div class="modal-date-flex">
                                                 24/05/2021:
                                     </div>
                                         <div class="modal-desc-flex">
-                                                    _Modification apparence du site.<br/>
-                                                    _Transfert de la bio de l'auteur dans une boîte modale.
+                                            &nbsp;&nbsp;_Modification apparence du site.<br/>
+                                            &nbsp;&nbsp;_Transfert de la bio de l'auteur dans une boîte modale.
                                         </div>
                                 </li> 
-                                <li>
+                                <li>                                            <!-- 04/06/2021 -->
                                     <div class="modal-date-flex">
                                                 04/06/2021:
                                             </div>
                                         <div class="modal-desc-flex">
                                                 <div>
-                                                    _Ajout <a href="link/aloeindex.html#humilis"><strong>Aloe humilis</strong></a> (Mes Aloe).<br/>
-                                                    _Ajout <a href="link/aloeindex.html#marmalade"><strong>Aloe marmalade</strong></a> (Mes Aloe).<br/>
-                                                    _Ajout <a href="link/othercactusindex.html#myriostigma"><strong>Astrophytum myriostigma</strong></a> (Mes Cactus).<br/>
-                                                    _Ajout <a href="link/othercactusindex.html#esposta"><strong>Espostoa</strong></a> (Mes Cactus).<br/>
-                                                    _Ajout <a href="link/othercactusindex.html#subdenudata"><strong>Echinopsis subdenudata</strong></a> (Mes Cactus).<br/>
-                                                    _Ajout <a href="link/othercactusindex.html#stainesii"><strong>Ferocactus stainesii</strong></a> (Mes Cactus).<br/>
-                                                    _Ajout <a href="link/othercactusindex.html#magnificus"><strong>Notocactus magnificus</strong></a> (Mes Cactus).<br/>
-                                                    _Ajout <a href="link/othercactusindex.html#opuntia"><strong>Opuntia</strong></a> (Mes Cactus).<br/>
-                                                    _Ajout <a href="link/othercactusindex.html#coryne"><strong>Stetsonia coryne</strong></a> (Mes Cactus).<br/>
-                                                    _Ajout <a href="link/euphorbiasindex.html#inconstantia"><strong>Euphorbia inconstantia</strong></a> (Mes Euphorbes).<br/>
-                                                    _Ajout <a href="link/othersucculentsindex.html#cooperi"><strong>Adromischus cooperi</strong></a> (Mes autres succulentes).<br/>
-                                                    _Ajout <a href="link/othersucculentsindex.html#americanavariegata"><strong>Agave americana variegata</strong></a> (Mes autres succulentes).<br/>
-                                                    _Ajout <a href="link/othersucculentsindex.html#pulchra"><strong>Frithia pulchra</strong></a> (Mes autres succulentes).<br/>
-                                                    _Ajout <a href="link/othersucculentsindex.html#titanopsis"><strong>Titanopsis</strong></a> (Mes autres succulentes).<br/>
-                                                    _Ajout <a href="link/otherplantsindex.html#strawberry1"><strong>Caladium strawberry</strong></a> (Mes autres plantes).
+                                                    &nbsp;&nbsp;_Ajout <a href="link/aloeindex.html#humilis"><strong>Aloe humilis</strong></a> (Mes Aloe).<br/>
+                                                    &nbsp;&nbsp;_Ajout <a href="link/aloeindex.html#marmalade"><strong>Aloe marmalade</strong></a> (Mes Aloe).<br/>
+                                                    &nbsp;&nbsp;_Ajout <a href="link/othercactusindex.html#myriostigma"><strong>Astrophytum myriostigma</strong></a> (Mes Cactus).<br/>
+                                                    &nbsp;&nbsp;_Ajout <a href="link/othercactusindex.html#espostoa"><strong>Espostoa</strong></a> (Mes Cactus).<br/>
+                                                    &nbsp;&nbsp;_Ajout <a href="link/othercactusindex.html#subdenudata"><strong>Echinopsis subdenudata</strong></a> (Mes Cactus).<br/>
+                                                    &nbsp;&nbsp;_Ajout <a href="link/othercactusindex.html#stainesii"><strong>Ferocactus stainesii</strong></a> (Mes Cactus).<br/>
+                                                    &nbsp;&nbsp;_Ajout <a href="link/othercactusindex.html#magnificus"><strong>Notocactus magnificus</strong></a> (Mes Cactus).<br/>
+                                                    &nbsp;&nbsp;_Ajout <a href="link/othercactusindex.html#opuntia"><strong>Opuntia</strong></a> (Mes Cactus).<br/>
+                                                    &nbsp;&nbsp;_Ajout <a href="link/othercactusindex.html#coryne"><strong>Stetsonia coryne</strong></a> (Mes Cactus).<br/>
+                                                    &nbsp;&nbsp;_Ajout <a href="link/euphorbiasindex.html#inconstantia"><strong>Euphorbia inconstantia</strong></a> (Mes Euphorbes).<br/>
+                                                    &nbsp;&nbsp;_Ajout <a href="link/othersucculentsindex.html#cooperi"><strong>Adromischus cooperi</strong></a> (Mes autres succulentes).<br/>
+                                                    &nbsp;&nbsp;_Ajout <a href="link/othersucculentsindex.html#americanavariegata"><strong>Agave americana variegata</strong></a> (Mes autres succulentes).<br/>
+                                                    &nbsp;&nbsp;_Ajout <a href="link/othersucculentsindex.html#pulchra"><strong>Frithia pulchra</strong></a> (Mes autres succulentes).<br/>
+                                                    &nbsp;&nbsp;_Ajout <a href="link/othersucculentsindex.html#titanopsis"><strong>Titanopsis</strong></a> (Mes autres succulentes).<br/>
+                                                    &nbsp;&nbsp;_Ajout <a href="link/otherplantsindex.html#strawberry1"><strong>Caladium strawberry</strong></a> (Mes autres plantes).
                                                 </div>
                                         </div>
                                 </li>  
-                                <li>
+                                <li>                                            <!-- 05/06/2021 -->
                                     <div class="modal-date-flex">
                                             05/06/2021:
                                         </div>
                                         <div class="modal-desc-flex">
                                                 <div>
-                                                    _Ajout <a href="link/othercactusindex.html#multicostatus"><strong>Echinofossulocactus multicostatus</strong></a> (Mes Cactus).<br/>
-                                                    _Ajout <a href="link/othercactusindex.html#celsianus"><strong>Oreocereus celsianus</strong></a> (Mes Cactus).<br/>
-                                                    _Ajout <a href="link/fernsindex.html#emeiensis"><strong>Coniogramme emeiensis</strong></a> (Mes Fougères).<br/>
-                                                    _Ajout <a href="link/othersucculentsindex.html#rufescensvariegata"><strong>Anacampseros rufescens variegata</strong></a> (Mes Autres succulentes).<br/>
-                                                    _Ajout <a href="link/otherplantsindex.html#anthurium"><strong>Anthurium</strong></a> (Mes autres plantes).<br/>
+                                                    &nbsp;&nbsp;_Ajout <a href="link/othercactusindex.html#multicostatus"><strong>Echinofossulocactus multicostatus</strong></a> (Mes Cactus).<br/>
+                                                    &nbsp;&nbsp;_Ajout <a href="link/othercactusindex.html#celsianus"><strong>Oreocereus celsianus</strong></a> (Mes Cactus).<br/>
+                                                    &nbsp;&nbsp;_Ajout <a href="link/fernsindex.html#emeiensis"><strong>Coniogramme emeiensis</strong></a> (Mes Fougères).<br/>
+                                                    &nbsp;&nbsp;_Ajout <a href="link/othersucculentsindex.html#rufescensvariegata"><strong>Anacampseros rufescens variegata</strong></a> (Mes Autres succulentes).<br/>
+                                                    &nbsp;&nbsp;_Ajout <a href="link/otherplantsindex.html#anthurium"><strong>Anthurium</strong></a> (Mes autres plantes).<br/>
                                                 </div>
                                         </div>
                                 </li>   
-                                <li>
+                                <li>                                            <!-- 09/06/2021 -->
                                     <div class="modal-date-flex">
                                             09/06/2021:
                                     </div>
                                         <div class="modal-desc-flex">
                                                 <div>
-                                                    _Modification des rubriques <strong>"Mes Cactus"</strong> et <strong>"Mes Orchidées"</strong> en <strong>"Mes autres Cactus"</strong> et <strong>"Mes autres Orchidées"</strong>
-                                                    _Ajout de 4 rubriques sur la page d'accueil <strong>(Gymnocalicium, Mammillaria, Notocactus, Phalaenopsis)</strong>
+                                                    &nbsp;&nbsp;_Modification des rubriques <strong>"Mes Cactus"</strong> et <strong>"Mes Orchidées"</strong> en <strong>"Mes autres Cactus"</strong> et <strong>"Mes autres Orchidées"</strong><br/>
+                                                    &nbsp;&nbsp;_Ajout de 4 rubriques sur la page d'accueil <strong>(Gymnocalicium, Mammillaria, Notocactus, Phalaenopsis)</strong>
                                                 </div>
                                         </div>
                                 </li> 
-                                <li>
+                                <li>                                            <!-- 18/06/2021 -->
                                     <div class="modal-date-flex">
                                             18/06/2021:
                                     </div>
                                     <div class="modal-desc-flex">
                                         <div>
-                                            _Ajout de liens entre les fiches infos et galeries photos par espèce de plante pour faciliter la navigation.
+                                            &nbsp;&nbsp;_Ajout de liens entre les fiches infos et galeries photos par espèce de plante pour faciliter la navigation.
                                         </div>
                                 </div>
                                 </li>
-                                <li>
+                                <li>                                            <!-- 21/06/2021 -->
                                     <div class="modal-date-flex">
                                             21/06/2021:
                                     </div>
                                     <div class="modal-desc-flex">
                                         <div>
-                                            _Ajout d'une page expliquant comment j'accroche mes Tillandsia.
+                                            &nbsp;&nbsp;_Ajout d'une page expliquant comment j'accroche mes <a class="species-repotting-info" href="link/installtillandsia.html" alt="Accrochage Tillandsia" title="Accrochage Tillandsia"><strong>Tillandsia</strong></a>..
                                         </div>
                                 </div>
                                 </li>      
-                                <li>
+                                <li>                                            <!-- 23/06/2021 -->
                                     <div class="modal-date-flex">
                                             23/06/2021:
                                     </div>
                                     <div class="modal-desc-flex">
                                         <div>
-                                            _Ajout d'une page expliquant comment je rempote mon Ferocactus stainesii.
-                                            _Ajout d'une page expliquant comment je rempote mon Notocactus magnificus.
-                                            _Ajout d'une page expliquant comment je rempote mes Oreocereus celsianus.
-                                            _Ajout d'une page expliquant comment je rempote mes Stetsonia coryne.
+                                            &nbsp;&nbsp;_Ajout d'une page expliquant comment je rempote mon <a class="species-repotting-info" href="link/repottingferocactusstainesii.html" alt="Rempotage Ferocactus stainesii" title="Rempotage Ferocactus stainesii"><strong>Ferocactus stainesii</strong></a>.<br/>
+                                            &nbsp;&nbsp;_Ajout d'une page expliquant comment je rempote mes <a class="species-repotting-info" href="link/repottingnotocactusmagnificus.html" alt="Rempotage Notocactus magnificus" title="Rempotage Notocactus magnificus"><strong>Notocactus magnificus.</strong></a><br/>
+                                            &nbsp;&nbsp;_Ajout d'une page expliquant comment je rempote mon <a class="species-repotting-info" href="link/repottingoreocereuscelsianus.html" alt="Rempotage Oreocereus celsianus" title="Rempotage Oreocereus celsianus"><strong>Oreocereus celsianus.</strong></a><br/>
+                                            &nbsp;&nbsp;_Ajout d'une page expliquant comment je rempote mes <a class="species-repotting-info" href="link/repottingstetsoniacoryne.html" alt="Rempotage Stetsonia coryne" title="Rempotage Stetsonia coryne"><strong>Stetsonia coryne.</strong></a>
                                         </div>
                                 </div>
-                                </li>                                                    
+                                </li>       
+                                <li>                                            <!-- 26/06/2021 -->
+                                    <div class="modal-date-flex">
+                                            26/06/2021:
+                                    </div>
+                                    <div class="modal-desc-flex">
+                                        <div>
+                                            &nbsp;&nbsp;_Ajout <a href="link/othersucculentsindex.html#lithops"><strong>Lithops</strong></a> (Mes Autres succulentes).<br/>
+                                            &nbsp;&nbsp;_Ajout d'une page expliquant comment je rempote mes <a class="species-repotting-info" href="link/repottinglithops.html" alt="Rempotage lithops" title="Rempotage lithops"><strong>Lithops</strong></a>.
+                                        </div>
+                                </div>
+                                </li>                                                 
                             </ul>               
                         </div>      
         </div>                
