--- a/link/othersucculentsindex.html
+++ b/link/othersucculentsindex.html
@@ -158,7 +158,7 @@
                 <a href="#lithops5">Arrosage en hiver</a>
                 <a href="#lithops6">Rempotage</a>
             </nav-tabs>   
-            <div class="index-category-tab-content" id="lithops1"><span class="species">Frithia pulchra<a href="othersucculentsgallery.html#lithops">Voir la galerie photo</a></span>
+            <div class="index-category-tab-content" id="lithops1"><span class="species">Lithops<a href="othersucculentsgallery.html#lithops">Voir la galerie photo</a></span>
                     <img src="../assets/img/othersucculents/index/lithops.jpg" alt="lithops" title="lithops"/>
             </div>   
             <div class="index-category-tab-content" id="lithops2" hidden="hidden">Je le mets dehors à partir de la deuxième quinzaine de Mai jusque courant Octobre dans une situation très lumineuse avec du soleil direct toute la journée. <br/>Seulement après avoir été acclimaté au soleil.
@@ -169,8 +169,8 @@
             </div>
             <div class="index-category-tab-content" id="lithops5" hidden="hidden">Je stoppe tous les arrosages durant plusieurs mois une fois rentré jusqu'au retour du beau temps. <br/> Je donne un peu d'eau seulement si je vois que les feuilles commence à se fripper. 
             </div>
-            <div class="index-category-tab-content" id="lithops6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br/>Je les garde dans un pot en plastiquerond qui se trouve dans un grand bac carré en terr-cuite rempli de sable afin de garder les pieds des Lithops au fraios. <br/>J'ai garni le haut de graviers de Jura car le rendu me plaît.
-                <a class="species-repotting-info" href="repottinglithops.html" alt="Rempotage lithops" title="Rempotage lithops">Voir comment je rempote mes lithops</a>
+            <div class="index-category-tab-content" id="lithops6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br/>Je les garde dans un pot en plastique rond qui se trouve dans un grand bac carré en terre-cuite rempli de sable afin de garder les pieds des Lithops au frais. <br/>J'ai garni le haut de graviers de Jura car le rendu me plaît.
+                <a class="species-repotting-info" href="repottinglithops.html" alt="Rempotage lithops" title="Rempotage lithops">Voir comment je rempote mes Lithops</a>
             </div>
         </section>
         <hr>
